--- a/Projects/GBLPingExample/Base.lproj/Main.storyboard
+++ b/Projects/GBLPingExample/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -28,30 +28,6 @@ the default ping location is cloudflare's main name server
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0WQ-TR-vgw">
-                                <rect key="frame" x="154.5" y="779" width="105" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="105" id="S3e-Xw-GBy"/>
-                                    <constraint firstAttribute="height" constant="30" id="nSE-5F-1lB"/>
-                                </constraints>
-                                <state key="normal" title="Stop">
-                                    <color key="titleColor" red="0.83137254900000002" green="0.1960784314" blue="0.23137254900000001" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="stopButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3Tp-ep-a8s"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SqN-zv-b23">
-                                <rect key="frame" x="154.5" y="741" width="105" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="Qmt-OF-DbS"/>
-                                    <constraint firstAttribute="width" constant="105" id="g6l-xx-JGz"/>
-                                </constraints>
-                                <state key="normal" title="Ping"/>
-                                <connections>
-                                    <action selector="pingButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8tm-Cs-LPm"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ping Log" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TLh-pG-fOI">
                                 <rect key="frame" x="20" y="80" width="193" height="42"/>
                                 <constraints>
@@ -62,23 +38,70 @@ the default ping location is cloudflare's main name server
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="js2-fc-oZH">
+                                <rect key="frame" x="50" y="782" width="314" height="80"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SqN-zv-b23">
+                                        <rect key="frame" x="0.0" y="0.0" width="314" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="FYF-z6-3BO"/>
+                                        </constraints>
+                                        <state key="normal" title="Start Pinging"/>
+                                        <connections>
+                                            <action selector="pingButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="8tm-Cs-LPm"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="t5C-sF-FgT">
+                                        <rect key="frame" x="0.0" y="30" width="314" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="Sbv-Vq-xXH"/>
+                                        </constraints>
+                                        <state key="normal" title="Pause">
+                                            <color key="titleColor" systemColor="systemYellowColor"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="pauseButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="YN9-fB-M7k"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0WQ-TR-vgw">
+                                        <rect key="frame" x="0.0" y="60" width="314" height="20"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="20" id="FhM-nZ-xbi"/>
+                                        </constraints>
+                                        <state key="normal" title="Reset">
+                                            <color key="titleColor" red="0.83137254900000002" green="0.1960784314" blue="0.23137254900000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="stopButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="3Tp-ep-a8s"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="0WQ-TR-vgw" firstAttribute="leading" secondItem="js2-fc-oZH" secondAttribute="leading" id="1Vx-jY-xtd"/>
+                                    <constraint firstAttribute="trailing" secondItem="0WQ-TR-vgw" secondAttribute="trailing" id="C4q-eW-ikF"/>
+                                    <constraint firstItem="SqN-zv-b23" firstAttribute="leading" secondItem="js2-fc-oZH" secondAttribute="leading" id="IiO-Eu-ert"/>
+                                    <constraint firstItem="t5C-sF-FgT" firstAttribute="leading" secondItem="js2-fc-oZH" secondAttribute="leading" id="UJa-7Z-SCT"/>
+                                    <constraint firstAttribute="trailing" secondItem="t5C-sF-FgT" secondAttribute="trailing" id="jDY-RD-kjy"/>
+                                    <constraint firstAttribute="trailing" secondItem="SqN-zv-b23" secondAttribute="trailing" id="sdd-p3-Nve"/>
+                                </constraints>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="cpy-eK-1YW" firstAttribute="top" secondItem="TLh-pG-fOI" secondAttribute="bottom" constant="16" id="73b-T7-mbu"/>
                             <constraint firstAttribute="bottom" secondItem="cpy-eK-1YW" secondAttribute="bottom" id="8mQ-I6-yhT"/>
+                            <constraint firstItem="js2-fc-oZH" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="50" id="DcK-HT-Jc8"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="cpy-eK-1YW" secondAttribute="trailing" constant="20" id="EnV-Q9-Tmo"/>
                             <constraint firstItem="TLh-pG-fOI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Gam-8y-gaF"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="0WQ-TR-vgw" secondAttribute="bottom" constant="53" id="LIP-uD-34Q"/>
-                            <constraint firstItem="SqN-zv-b23" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Thp-SK-jFA"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="SqN-zv-b23" secondAttribute="bottom" constant="91" id="bPl-m5-lM4"/>
+                            <constraint firstAttribute="bottom" secondItem="js2-fc-oZH" secondAttribute="bottom" constant="34" id="SHE-9G-uBM"/>
                             <constraint firstItem="TLh-pG-fOI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="36" id="bcY-bV-2ce"/>
-                            <constraint firstItem="0WQ-TR-vgw" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ibj-Vr-2MK"/>
+                            <constraint firstAttribute="trailing" secondItem="js2-fc-oZH" secondAttribute="trailing" constant="50" id="hit-Ut-9fR"/>
                             <constraint firstItem="cpy-eK-1YW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="pIM-it-Ym6"/>
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="pauseButton" destination="t5C-sF-FgT" id="0ol-c1-Z1O"/>
                         <outlet property="pingButton" destination="SqN-zv-b23" id="rPv-i8-yJ9"/>
                         <outlet property="pingLog" destination="cpy-eK-1YW" id="MiI-WR-8tn"/>
                         <outlet property="stopButton" destination="0WQ-TR-vgw" id="kYy-Vk-a2S"/>
@@ -95,6 +118,9 @@ the default ping location is cloudflare's main name server
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemYellowColor">
+            <color red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
